2009-10-09  Dirk Schulze  <krit@webkit.org>

Reviewed by Oliver Hunt.

        SVG Filter feGaussianBlur implementation is missing
        [https://bugs.webkit.org/show_bug.cgi?id=28141]

        This is the implementation of GaussianBlur filter for SVG.

        There is already a test for feGaussianBlur
        Test: svg/W3C-SVG-1.1/filters-gauss-01-b-w3c.svg

        Test: svg/filters/feGaussianBlur.svg

        * platform/graphics/filters/FilterEffect.cpp:
        (WebCore::FilterEffect::FilterEffect):
        * platform/graphics/filters/FilterEffect.h:
        (WebCore::FilterEffect::isAlphaImage):
        (WebCore::FilterEffect::setIsAlphaImage):
        * platform/graphics/filters/SourceAlpha.cpp:
        (WebCore::SourceAlpha::apply):
        * svg/graphics/filters/SVGFEGaussianBlur.cpp:
        (WebCore::boxBlur):
        (WebCore::FEGaussianBlur::apply):

        Test for feGaussianBlur implementation

        * platform/mac/svg/filters/feGaussianBlur-expected.checksum: Added.
        * platform/mac/svg/filters/feGaussianBlur-expected.png: Added.
        * platform/mac/svg/filters/feGaussianBlur-expected.txt: Added.
        * svg/filters/feGaussianBlur.svg: Added.


Canonical link: https://commits.webkit.org/40924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49402 268f45cc-cd09-0410-ab3c-d52691b4dbfc