WebCore/platform/graphics/filters/FilterEffect.cpp
@@ -33,6 +33,7 @@ FilterEffect::FilterEffect()
     , m_hasY(false)
     , m_hasWidth(false)
     , m_hasHeight(false)
+    , m_alphaImage(false)
 {
 }
 
