WebCore/platform/graphics/filters/FilterEffect.h
@@ -79,6 +79,10 @@ namespace WebCore {
         FloatRect calculateDrawingRect(const FloatRect&);
         IntRect calculateDrawingIntRect(const FloatRect&);
 
+        // black image with different alpha values
+        bool isAlphaImage() { return m_alphaImage; }
+        void setIsAlphaImage(bool alphaImage) { m_alphaImage = alphaImage; }
+
         virtual FloatRect uniteChildEffectSubregions(Filter* filter) { return filter->filterRegion(); }
         virtual FloatRect calculateEffectRect(Filter*);
         virtual void apply(Filter*) = 0;
@@ -101,6 +105,8 @@ namespace WebCore {
         bool m_hasY : 1;
         bool m_hasWidth : 1;
         bool m_hasHeight : 1;
+
+        bool m_alphaImage;
 
         FloatRect m_subRegion;
         FloatRect m_unionOfChildEffectSubregions;
